--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="._modules.part_recyclerview.DroppableRecyclerActivity">
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+
 
 </manifest>
