--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.sharebay.vam.edgeui">
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
@@ -18,9 +20,8 @@
         </activity>
         <activity android:name="._modules.part_recyclerview.DroppableRecyclerActivity">
         </activity>
+        <activity android:name="._modules.part_parseXML.XmlPullActivity">
+        </activity>
     </application>
-
-    <uses-permission android:name="android.permission.VIBRATE" />
-
 
 </manifest>
